# loom

./: Cargo.toml  README.md
.github/workflows/: release.yml
examples/top/: top.json
python/: .gitignore  Cargo.toml  README.md  pyproject.toml
python/examples/: inspect_design.py
python/src/: lib.rs
python/tests/: test_loom.py
src/: def.rs  design.rs  emgeom.rs  fst.rs  klayout.rs  lef.rs  lib.rs  libcache.rs  liberty.rs  lz4.rs  main.rs  netlist.rs  sdc.rs  spef.rs  spice.rs  vcd.rs  verbosity.rs  yosys_json.rs
tests/: loom_loads_design.rs
tests/fixtures/: counter.vcd
