[package]
name = "vyges-loom"
version = "0.0.1"
edition = "2021"
description = "The shared design-data foundation for the Vyges EDA toolchain: parse-once / query-many readers (Verilog, Liberty, SDC, SPEF) + an in-memory design database. The loom the engines weave on."
license = "Apache-2.0"
authors = ["Vyges <https://vyges.com/contact>"]
homepage = "https://vyges.com"
repository = "https://github.com/vyges-tools/loom"
build = "build.rs"

# std-only (no external dependencies) so the core builds/tests offline.

[lib]
name = "vyges_loom"
path = "src/lib.rs"

[[bin]]
name = "vyges-loom"
path = "src/main.rs"
